# Nanquim

./: .gitignore  CMakeLists.txt  LICENSE  MANUAL.md  Makefile  README.md  REVIEW.md
cmake/: FindSDL2_gfx.cmake
examples/: diffraction_sim.c  fourier_demo.c  geometry_test.c  input_demo.c  polar_demo.c  robot_parade.c  scale_demo.c  static_test.c  test_pattern.c  time_test.c  tracking_demo.c
include/: nanquim.h
src/: nq_assets.c  nq_camera.c  nq_core.c  nq_draw.c  nq_input.c  nq_internal.h
